# FlightTrackingProject

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  callOpenSkyAPI.py  collector.py  docker-compose.yml  load.py  pyproject.toml  transform.py
.streamlit/: config.toml
storage/: local.py  s3.py
