[tool.poetry]
name = "flighttrackingproject"
version = "0.1.0"
description = ""
authors = ["Eazenli <yizhenli233@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.5"
python-dotenv = "^1.2.2"
polars = "^1.39.2"
streamlit = "^1.55.0"
pydeck = "^0.9.1"
boto3 = "^1.42.74"
altair = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
